   - add more options and allow pulling packages from Debian.
   - add mismatching source tarball detection (for fake syncs).
  * update-maintainer: Remove duplicate Original-Maintainer field.

  [ Michael Vogt ]
  * edit-patch:
    - support full path to the patch as well (LP: #585599)
    - support adding existing patches (e.g. from launchpad)
      thanks to David Futcher (LP: #586787)

 -- Benjamin Drung <bdrung@ubuntu.com>  Thu, 03 Jun 2010 21:32:01 +0200

ubuntu-dev-tools (0.99) lucid; urgency=low

  [ Andrey Voronov ]
  * pbuilder-dist: change requested/system arch order in check (LP: #557097)

  [ Michael Bienia ]
  * Update the defaults for maverick and let requestsync and
    pull-debian-source default to unstable (lp: #472837).

 -- Michael Bienia <geser@ubuntu.com>  Thu, 22 Apr 2010 21:31:48 +0200

ubuntu-dev-tools (0.98) lucid; urgency=low

  [ Ryan Kavanagh ]
  * Added the merge-changelog script from
    https://lists.ubuntu.com/archives/ubuntu-x/2009-June/000586.html for those
    who need to manually merge packages.
  * Fixed typo in doc/grab-merge.1

  [ Soren Hansen ]
  * Update get-branches to account for changes in LP's web UI. Really, someone
    should update it to use the LP API, but for now, this will have to do.

  [ Emmet Hikory ]
  * doc/mk-sbuild.1: add missing options to summary

  [ Michael Bienia ]
  * lp-shell: Use "udt-lp-shell" as LP API consumer instead of the non-unique
    "test" (lp: #558531).
  * get-branches: Use the LP API to obtain a list of branches of a team.

  [ Loïc Minier ]
  * bash_completion/pbuilder-dist, dch-repeat: list maverick in possible
    Ubuntu dists; the default dist for reverse-build-depends and
    submittodebian should be changed in maverick.

 -- Loïc Minier <loic.minier@ubuntu.com>  Fri, 16 Apr 2010 12:58:22 +0200

ubuntu-dev-tools (0.97) lucid; urgency=low

  [ Michael Bienia ]
  * lp-shell:
    + Support all known LP service names.
    + Add support for using different LP API versions.